# MicroRoyaleAoe

./: CrossbowMicroRoyale.py  CrossbowMicroRoyale.sh  MicroRoyaleGenerator.py  pyproject.toml
raw/: Blank_1v1.aoe2scenario
